...
      onStart: drawingStartHandler,
    },
    [positionChangeHandler, drawingStartHandler]
  );

  return (
      <Canvas testID="canvas" style={myStyle.container} onTouch={touchHandler}>
        {paths.map((path, index) => (
          <Path
            key={index}
            path={path.path}
            color={path.color}
            style={"stroke"}
...
