...
                style={styles.fixedContainerBgc}
                imageStyle={{height:350}}
                resizeMode='cover'
                blurRadius={40}
        >   
            <Animated.ScrollView 
                testID={"mainScroll"}
                style={{
                    zIndex:10,
                }}
                contentContainerStyle={{ 
                flexGrow: 1,
                paddingTop:350,
...
